--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Data Story</title>
+  <title>Hartford Housing Legislation and When Neighborhoods Will Be Impacted</title>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
