--- a/index.html
+++ b/index.html
@@ -84,36 +84,66 @@
           <p>If you need to create a table, use the <a href="https://www.tablesgenerator.com/html_tables">Tables Generator HTML tool</a>. Go to File > Import or manually enter your table data, then Generate the HTML code, and paste it here, similar to the sample below. </p>
 
           <style type="text/css">
-          .tg  {border-collapse:collapse;border-spacing:0;}
-          .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-            overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-            font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg .tg-lqy6{text-align:right;vertical-align:top}
-          .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
-          .tg .tg-dvpl{border-color:inherit;text-align:right;vertical-align:top}
-          </style>
-          <table class="tg">
-          <thead>
-            <tr>
-              <th class="tg-0pky">Header A</th>
-              <th class="tg-0pky">Header B</th>
-              <th class="tg-0pky">Header C</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="tg-dvpl">123</td>
-              <td class="tg-dvpl">456</td>
-              <td class="tg-dvpl">789</td>
-            </tr>
-            <tr>
-              <td class="tg-lqy6">987</td>
-              <td class="tg-lqy6">654</td>
-              <td class="tg-lqy6">321</td>
-            </tr>
-          </tbody>
-          </table>
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-lqy6{text-align:right;vertical-align:top}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-0lax" colspan="6"><span style="font-weight:700;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Over Half of Hartford Housing Units are in Large Buildings with 40+ Units</span></th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0lax"><span style="font-weight:700;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Apartment Building Size</span></td>
+    <td class="tg-0lax"><span style="font-weight:700;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Living Units Range</span></td>
+    <td class="tg-0lax"><span style="font-weight:700;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Number of Buildings</span></td>
+    <td class="tg-0lax"><span style="font-weight:700;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Housing Units</span></td>
+    <td class="tg-0lax"><span style="font-weight:700;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Percentage of Total Units</span></td>
+    <td class="tg-0lax"><span style="font-weight:700;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Approximate Number of People</span></td>
+  </tr>
+  <tr>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Large</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">40+</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">123</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">13,277</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">51%</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">32,926.96</span></td>
+  </tr>
+  <tr>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Medium</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">10-39</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">396</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">6,897</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">27%</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">17,104.56</span></td>
+  </tr>
+  <tr>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Small</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">4-9</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">994</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">5,762</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">22%</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">14,289.76</span></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">TOTAL</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">1513</span></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">25,936</span></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-lqy6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">64,321.28</span></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax" colspan="6"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent">Note: this table omits buildings with both less than three and an undefined number of units. The approximated number of people is calculated using 2.48 average Hartford household size as defined by</span><a href="https://www.census.gov/quickfacts/hartfordcityconnecticut"><span style="font-weight:400;font-style:normal;text-decoration:none;color:#000;background-color:transparent"> </span></a><a href="https://www.census.gov/quickfacts/hartfordcityconnecticut"><span style="font-weight:400;font-style:normal;text-decoration:underline;color:#15C;background-color:transparent">2015-2019 census data</span></a></td>
+  </tr>
+</tbody>
+</table>
 
           <p>Table 1: Add your caption here.</p>
 
