--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title> Research Reveals New Housing Legislation Disproportionately Impacts Neighbourhoods </title>
+  <title> Research Reveals New Housing Legislation Disproportionately Impacts Neighbourhoods  </title>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -55,7 +55,7 @@
       <h1>Hartford Housing Legislation and When Neighborhoods Will Be Impacted</h1>
       <p class="lead">Lachlan and Bonnie </p>
       <p class="lead">Last updated on November 18th 2021</p>
-      <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
+      <p class="lead">Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
 
