--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@ apartment buildings with 40+ units, relative to other Hartford neighborhoods. Ap
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Data</h2>
-          <p>Describe how you obtained your data and identify key steps so that readers can understand your methods and reproduce them in the future. Write in HTML format and include links when appropriate.</p>
+          <p>The raw property data was gathered from the city of Hartford open source data website. This source can be found here. Once he had the data we used a number of different programs, google sheets, geocoding by smart monkey, map shaper, data wrapper, ect, to create our visualizations and evidently create our data stories. Our raw geocoded data can be found here.
+</p>
         </div>
       </div>
     </div>
@@ -186,9 +187,7 @@ apartment buildings with 40+ units, relative to other Hartford neighborhoods. Ap
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Credits</h2>
-          <p>GIVE CREDIT to people, organizations, resources, and tools that helped you to create this data story. Write in HTML format and include links when appropriate. If you wish to cite a reading, use any acceptable bibiography style and include a web link when available, similar to this sample:</p>
-
-          <p> Rebecca Lurye, “New Housing Code in Hartford Would Keep Slumlords from Hiding Behind LLCs,” Hartford Courant, May 31, 2019, https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html.</p>
+                   <p> Rebecca Lurye, “New Housing Code in Hartford Would Keep Slumlords from Hiding Behind LLCs,” Hartford Courant, May 31, 2019, <a href="https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html">https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html</a> .</p>
 
         </div>
       </div>
