--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ apartment buildings with 40+ units, relative to other Hartford neighborhoods. Ap
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Data</h2>
-          <p>The raw property data was gathered from the city of Hartford open source data website. This source can be found <a href="https://data.hartford.gov/Financial/CAMAGIS_Property_Details/uepu-9ktm">here</a>. Once he had the data we used a number of different programs, google sheets, geocoding by smart monkey, map shaper, data wrapper, ect, to create our visualizations and evidently create our data stories. Our raw geocoded data can be found <a href="https://docs.google.com/spreadsheets/d/1ddwJCHDI9hdDAABvbvtkVYeSa7tKTOohUjSUKyqjOAY/edit?usp=sharing">here</a>.
+          <p>The raw property data was gathered from the city of Hartford open source data website. This source can be found <a href="https://data.hartford.gov/Financial/CAMAGIS_Property_Details/uepu-9ktm">here</a>. Once we had the data we used a number of different programs, google sheets, geocoding by smart monkey, map shaper, data wrapper, ect, to create our visualizations and evidently create our data stories. Our raw geocoded data can be found <a href="https://docs.google.com/spreadsheets/d/1ddwJCHDI9hdDAABvbvtkVYeSa7tKTOohUjSUKyqjOAY/edit?usp=sharing">here</a>.
 </p>
         </div>
       </div>
