--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title> Research Reveals New Housing Legislation Disproportionately Impacts Neighbourhoods  </title>
+  <title> Research Reveals New Housing Legislation Disproportionately Holds Landlords Accountable by Neighbourhood
+  </title>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -53,8 +54,8 @@
   <header class="bg-secondary text-white">
     <div class="container text-center">
       <h1>Hartford Housing Legislation and When Neighborhoods Will Be Impacted</h1>
-      <p class="lead">Lachlan and Bonnie </p>
-      <p class="lead">Last updated on November 18th 2021</p>
+      <p class="lead">Elizabeth "Bonnie" LaBonte and Lachlan Clark </p>
+      <p class="lead">Last updated on December 9th 2021</p>
       <p class="lead">Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
@@ -64,7 +65,13 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Story</h2>
-          <p class="lead"> Which landlords will Hartford hold accountable? The Center for Leadership and Justice’s No More Slumlords! campaign initiated an October 2019 housing code designed to improve living conditions. 
+          <p class="lead"> Which landlords will Hartford hold accountable? The Center for Leadership and Justice’s No More Slumlords! campaign initiated an October 2019 housing code designed to improve living conditions. The CLJ, formally known as the Christian Activities Council, organized Hartford residents who were subject to unacceptable housing conditions and unable to hold landlords and LLCs accountable for exploiting HUD’s Section 8 housing contracts. By collecting testimonies, holding forums, and pressuring the Hartford City Council the CLJ was successful in its initiatives to put more restraint on out-of-town landlords and increase provisions to file complaints.
+
+Additional Information about the CLJ’s work and the  No More Slumlords! Campaign: 
+Faith Congressional Church
+Connecticut NPR
+News8 WTNH.com
+
             
            <p> This legislation modernizes regulations around limited liability companies and creates provisions for the city to request new licensing applications from property owners with recurring violations. The provisions began to go into effect in July 2021 for apartments buildings of 40 units or greater. The housing code will affect medium-sized apartment buildings with 10-39 units in 2022, small-sized apartment buildings with 4-9 units in 2021, and three-family homes in 2024. </p>
             
