--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Story</h2>
-          <p class="lead"> Which landlords will Hartford hold accountable? The Center for Leadership and Justice’s No More Slumlords! campaign initiated an October 2019 housing code designed to improve living conditions. The CLJ, formally known as the Christian Activities Council, organized Hartford residents who were subject to unacceptable housing conditions and unable to hold landlords and LLCs accountable for exploiting HUD’s Section 8 housing contracts. By collecting testimonies, holding forums, and pressuring the Hartford City Council the CLJ was successful in its initiatives to put more restraint on out-of-town landlords and increase provisions to file complaints.
+          <p class="lead"> Which landlords will Hartford hold accountable? The Center for Leadership and Justice’s No More Slumlords! campaign initiated an October 2019 housing code designed to improve living conditions. The CLJ, formally known as the Christian Activities Council, organized Hartford residents who were subject to unacceptable housing conditions and unable to hold landlords and LLCs accountable for exploiting HUD’s Section 8 housing contracts. By collecting testimonies, holding forums, and pressuring the Hartford City Council the CLJ was successful in its initiatives to put more restraint on out-of-town landlords and increase provisions to file complaints.</p>
 
-Additional Information about the CLJ’s work and the  No More Slumlords! Campaign: 
-Faith Congressional Church
-Connecticut NPR
-News8 WTNH.com
-
+<p class="lead">Additional Information about the CLJ’s work and the  No More Slumlords! Campaign: </p>
+<p class="lead"> <a href="https://faithmatterstoday.org/no-more-slumlords/">Faith Congressional Church</a></p> 
+<p class="lead"> <a href="https://www.ctpublic.org/news/2019-11-14/hartford-residents-claim-victory-against-slumlords-in-citys-new-housing-codes">Connecticut NPR</a></p>
+<p class="lead"> <a href="https://www.wtnh.com/video/dept-of-public-health-commissioner-dr-manisha-juthani-talks-to-news-8-about-high-covid-19-positivity-rate/7211325/">News8 WTNH.com</a>
+</p>
             
            <p> This legislation modernizes regulations around limited liability companies and creates provisions for the city to request new licensing applications from property owners with recurring violations. The provisions began to go into effect in July 2021 for apartments buildings of 40 units or greater. The housing code will affect medium-sized apartment buildings with 10-39 units in 2022, small-sized apartment buildings with 4-9 units in 2021, and three-family homes in 2024. </p>
             
